--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,8 @@ body {
   
   .row {
     border-top: 1px solid white;
+    display: flex;
+    display: -ms-flexbox;
   }
   
   .hour {
@@ -51,6 +53,7 @@ body {
     border-bottom-right-radius: 15px;
     background-color: #06aed5;
     color: white;
+    padding: 2rem;
   }
   
   .saveBtn i:hover {
