--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,7 @@ body {
   
   .description {
     white-space: pre-wrap;
+    display: block;
   }
   
   .time-block {
@@ -22,44 +23,11 @@ body {
   
   .row {
     padding: 1px;
-    display: flex;
-    display: -ms-flexbox;
+    
+    display: block;
     border: 2px solid black;
     border-radius: 1rem;
   }
   
-  .hour {
-    background-color: #ffffff;
-    color: #000000;
-    border-top: 1px dashed #000000;
-  }
-  
-  .past {
-    background-color: #d3d3d3;
-    color: white;
-  }
-  
-  .present {
-    background-color: #ff6961;
-    color: white;
-  }
-  
-  .future {
-    background-color: #77dd77;
-    color: white;
-  }
-  
-  .saveBtn {
-    border-left: 1px solid black;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    background-color: #06aed5;
-    color: white;
-    padding: 2rem;
-  }
-  
-  .saveBtn i:hover {
-    font-size: 20px;
-    transition: all 0.3s ease-in-out;
-  }
+
   
